--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "videojs-react",
   "version": "1.0.0",
   "description": "videojs based react component",
-  "main": "dist/index.js",
+  "main": "build/index.js",
+  "module": "build/index.module.js",
   "scripts": {
     "test": "./node_modules/.bin/jest",
     "lint": "./node_modules/.bin/eslint src/ ",
@@ -28,14 +29,14 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.7.1",
     "prettier": "^1.17.0",
     "react-test-renderer": "^16.8.6",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.1",
-    "webpack-dev-server": "^3.3.1"
+    "rollup": "^1.10.1",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.3.4",
+    "rollup-plugin-node-resolve": "^4.2.3",
+    "rollup-plugin-replace": "^2.2.0"
   },
   "lint-staged": {
     "*.{js,jsx}": [
