--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "test": "./node_modules/.bin/jest",
     "lint": "./node_modules/.bin/eslint src/ ",
     "pretty-quick": "./node_modules/.bin/pretty-quick --staged",
-    "build": "webpack --mode production",
-    "start": "webpack-dev-server --open --mode development"
+    "build": "node_modules/.bin/rollup -c"
   },
   "keywords": [],
   "author": "",
