--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     ],
     "react/prop-types": 0,
     "react/destructuring-assignment": 0,
+    "react/no-multi-comp": 0,
     "no-underscore-dangle": 0,
     "import/imports-first": ["error", "absolute-first"],
     "import/newline-after-import": "error",
