--- a/example/package.json
+++ b/example/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "videojs-react",
+  "name": "videojs-coursebuilder",
   "version": "1.0.0",
-  "description": "videojs based react component",
-  "main": "build/index.js",
-  "module": "build/index.module.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/jest",
-    "test:watch": "./node_modules/.bin/jest --watch",
     "lint": "./node_modules/.bin/eslint src/ ",
     "pretty-quick": "./node_modules/.bin/pretty-quick --staged",
-    "build": "node_modules/.bin/rollup -c"
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --open --mode development"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.4.3",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
@@ -30,22 +27,14 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.7.1",
     "prettier": "^1.17.0",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
     "react-test-renderer": "^16.8.6",
-    "rollup": "^1.10.1",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.3.4",
-    "rollup-plugin-node-resolve": "^4.2.3",
-    "rollup-plugin-replace": "^2.2.0",
-    "video.js": "^7.5.4",
-    "videojs-youtube": "^2.6.0"
-  },
-  "peerDependencies": {
-    "video.js": "^7.5.4",
-    "videojs-youtube": "^2.6.0"
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-server": "^3.3.1"
   },
   "lint-staged": {
     "*.{js,jsx}": [
@@ -54,5 +43,14 @@
       "git add"
     ]
   },
-  "precommit": "NODE_ENV=production ./node_modules/.bin/lint-staged"
+  "precommit": "NODE_ENV=production ./node_modules/.bin/lint-staged",
+  "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "video.js": "^7.5.4",
+    "videojs-youtube": "^2.6.0",
+    "videojs-react": ".."
+  }
 }
